@@ -1057,7 +1057,8 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* NSH: Add cd and pwd commands and current working directory to all NSH
 	  commands that refer to paths.
 	* Fix errors and warnings introduced into Linux sim build because of recent
-	  Cygwin-related changes
+	  Cygwin-based sim changes
+	* NSH: Add mem command to display heap usage
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
